# bootstrap-meme

./: .gitignore  .gitmodules  00_qemo_system_document.md  00_univalent_embedding_scheme.md  00_vocabulary_analysis.md  01_rust_embedding_design.rs  02_embedding_space_report.md  02_meta_meme_clifford_embedding.md  02_rust_quine_engine_plan.md  03_first_analysis_ngram_harmonics.md  04_main_engine_design.rs  05_new_concept_bivectors.md  Cargo.toml  README.md  bootstrap.txt  bootstrap_docs.txt  code_analyzer.rs  declaration_splitter.rs  enhanced_uos_parser.rs  generated_rust_program.rs  kitkat_plan.md  main.rs  output_rewritten_rust.rs  output_rewritten_src_bin_emojitape_generator.rewritten.rs  output_rewritten_src_generator_mod.rewritten.rs  output_rewritten_src_interpreter.rewritten.rs  output_rewritten_src_rust_to_emoji_visitor.rewritten.rs  output_rewritten_src_rust_to_emoji_workaround.rewritten.rs  output_rewritten_src_tokenizer_mod.rewritten.rs  output_rewritten_src_types_emojitape_impl_emojitape.rewritten.rs  output_rewritten_src_types_emojitape_tests.rewritten.rs  output_rewritten_src_types_token_emojis_box_token.rewritten.rs  output_rewritten_src_types_token_emojis_comment_token.rewritten.rs  output_rewritten_src_types_token_emojis_exists_token.rewritten.rs  output_rewritten_src_types_token_emojis_func_start_token.rewritten.rs  output_rewritten_src_types_token_emojis_lambda_token.rewritten.rs  output_rewritten_src_types_token_emojis_maps_to_token.rewritten.rs  output_rewritten_src_types_token_emojis_mod.rewritten.rs  (+17 more)
docs/: index.md
patches/: 001_add_modules.cocci  (+13 more)
(+500 files in other folders)
